syntax = "proto3";

package user;

option go_package = "github.com/AndroSaal/RecommendationsForUsers/app/services/user/doc/proto";

message UserUpdate {
    int64 userId = 1;
    repeated string userInterests = 2;
}